@@ -1,0 +1,18 @@
+      Pluggable Authentication Modules (PAM)
+      ======================================
+      
+Full authentication based on UNIX user names and user groups and login 
+passwords is now supported on monitor links. This is of most importance
+to TCP monitor links which were previously very weakly protected.
+
+To use PAM authentication, you need to inform diald of the location of the 
+group security permissions file with the "authpam" configuration option. An
+example security file is provided in "config/auth.pam".
+
+
+*NOTE* In common with many other network password authentication systems,
+the password is transmitted over the network in unencrypted plain text
+format. The implications are that if your physical network is not secure, it
+is possible for intruders to intercept your passwords. The risk can be
+minimised by using the tcp_wrappers capability to restrict access to
+machines on the local area network only.
