@@ -1,0 +1,56 @@
+# Example diald config file for "auth pam <name> <password>" commands.
+# The diald config option "authpam" should specify the pathname
+# of this file (or a file similar to this). Connections via TCP
+# may use the "auth pam <name> <password>" control command to claim the
+# permissions relevant to "<group>" containing <name> specified in this file.
+# If the "<group>" is not found the connection will revert to the
+# default permissions specified by the "*" entry at the bottom
+# of this file (this matches anything so entries beyond this
+# will be ignored). If this entry is missing the default permissions
+# compiled in to diald will be used - usually control,auth,monitor.
+
+# The format of this file is, hopefully, self explanatory. The available
+# permission flags are:
+#
+# control	- Allow commands to be issued. If this is not set all
+#		  received data is treated as being a "message" command
+#		  argument.
+# config	- Allow *any* diald configuration option to be changed
+#		  using the "config" command.
+# block		- Allows the "block" command to be issued.
+# unblock	- Allows the "unblock" command to be issued.
+# force		- Allows the "force" command to be issued.
+# unforce	- Allows the "unforce" command to be issued.
+# down		- Allows the "down" command to be issued.
+# up		- Allows the "up" command to be issued.
+# delquit	- Allows the "delquit" command to be issued.
+# quit		- Allows the "quit" command to be issued.
+# reset		- Allows the "reset" command to be issued.
+# queue		- Allows the "queue" command to be issued.
+# debug		- Allows the "debug" command to be issued.
+# dynamic	- Allows the "dynamic" command to be issued.
+#		  This is normally only issued to the control FIFO and
+#		  not via a TCP connection so should not normally be set.
+# monitor	- Allows the "monitor" command to be issued.
+# message	- Allows the "message" command to be issued.
+# connect	- Allows the "connect" command to be issued.
+#		  This is normally only issued to the control FIFO and
+#		  not via a TCP connection so should not normally be set.
+# demand	- Allows the "demand" command to be issued.
+# nodemand	- Allows the "nodemand" command to be issued.
+# auth		- Allows the "auth" command to be issued.
+#		  If this is not set it will not be possible to change
+#		  the permission flags again.
+
+# A deity can do anything and everything.
+root		0xffffffff
+
+# A plain user is allowed to request the link go up or down as well.
+users		control,auth,monitor,up,down
+
+# An admin can block or force the link and enable/disable demand dialling.
+admin		control,auth,monitor,up,down,block,unblock,demand,nodemand,force,unforce
+
+# Anything not matched above causes the access flags to be set back
+# to a minimum.
+*		control,auth,monitor
