@@ -1,0 +1,4 @@
+#%PAM-1.0
+auth       required	pam_nologin.so
+auth       required	pam_pwdb.so shadow
+account    required	pam_pwdb.so
