@@ -58,11 +58,17 @@ Diald may be configured to listen on a fifo and a TCP port simultaneously.
 .LP
 The following commands may be sent to diald via the fifo or TCP port:
 .TP
-.B auth \fI<method> <string>\fR
+.B auth \fI<method> <string>\.\.\.\fR
 Authenticate this connection using the giving method and the
-given string. This changes the set of commands which will be
+given strings. This changes the set of commands which will be
 allowed on the connection. This command is only available on
 TCP connections.
+If \fI<method>\fR is "simple" then a single following
+string specifies the name of the privileges to request.
+If \fI<method>\fR is "pam" then the two following strings specify
+the UNIX username and password to be authenticated using PAM
+(Pluggable Authentication Modules). Privileges are then given
+according to group membership.
 .TP
 .B block
 Block diald from making outgoing calls until a unblock command is issued.
