@@ -24,6 +24,9 @@ int metric = DEFAULT_METRIC;
 char *link_name = 0;
 char *link_desc = 0;
 char *authsimple = 0;
+#ifdef AUTH_PAM
+char *authpam = 0;
+#endif
 char *initializer = 0;
 char *deinitializer = 0;
 char *connector = 0;
@@ -139,6 +142,9 @@ struct {
     {"linkname","<name>",1,&link_name,set_str},
     {"linkdesc","<description>",1,&link_desc,set_str},
     {"authsimple","<file>",1,&authsimple,set_str},
+#ifdef AUTH_PAM
+    {"authpam","<file>",1,&authpam,set_str},
+#endif
     {"initializer","<script>",1,&initializer,set_str},
     {"deinitializer","<script>",1,&deinitializer,set_str},
     {"proxy","<interface>",1,&proxyif,set_str},
@@ -259,6 +265,10 @@ void init_vars()
     link_desc = 0;
     if (authsimple) free(authsimple);
     authsimple = 0;
+#ifdef AUTH_PAM
+    if (authpam) free(authpam);
+    authpam = 0;
+#endif
     if (initializer) free(initializer);
     initializer = 0;
     if (deinitializer) free(deinitializer);
